--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "classnames": "^2.3.2",
     "graphql": "^16.6.0",
     "next": "12.3.0",
     "react": "18.2.0",
