finished: login-register page

--- a/codegen.yml
+++ b/codegen.yml
@@ -1,9 +1,9 @@
 overwrite: true
 schema: "http://localhost:4000/graphql"
-documents: "src/graphql/**/*.graphql"
+documents: "src/lib/graphql/**/*.graphql"
 generates:
-  src/generated/graphql.tsx:
-    plugins:
-      - "typescript"
-      - "typescript-operations"
-      - "typescript-react-apollo"
+   src/lib/generated/graphql.tsx:
+      plugins:
+         - "typescript"
+         - "typescript-operations"
+         - "typescript-react-apollo"
