--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@hookform/error-message": "^2.0.0",
     "classnames": "^2.3.2",
     "graphql": "^16.6.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-toastify": "^9.0.8",
     "zustand": "^4.1.1"
   },
