--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.35.0",
+    "react-intersection-observer": "^9.4.0",
     "react-toastify": "^9.0.8",
     "zustand": "^4.1.1"
   },
