--- a/package.json
+++ b/package.json
@@ -1,46 +1,55 @@
 {
-  "name": "food-order-app-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "gen": "graphql-codegen --config codegen.yml",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.6.9",
-    "@hookform/error-message": "^2.0.0",
-    "classnames": "^2.3.2",
-    "graphql": "^16.6.0",
-    "next": "12.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.35.0",
-    "react-intersection-observer": "^9.4.0",
-    "react-toastify": "^9.0.8",
-    "zustand": "^4.1.1"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "2.12.0",
-    "@graphql-codegen/typescript": "2.7.3",
-    "@graphql-codegen/typescript-operations": "2.5.3",
-    "@graphql-codegen/typescript-react-apollo": "3.3.3",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@types/jest": "^29.5.12",
-    "@types/node": "18.7.16",
-    "@types/react": "18.0.19",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.9",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.8.3"
-  }
+   "name": "food-order-app-frontend",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint",
+      "gen": "graphql-codegen --config codegen.yml",
+      "test": "jest"
+   },
+   "dependencies": {
+      "@apollo/client": "^3.6.9",
+      "@hookform/error-message": "^2.0.0",
+      "@react-three/drei": "^9.106.0",
+      "@react-three/fiber": "^8.16.7",
+      "classnames": "^2.3.2",
+      "graphql": "^16.6.0",
+      "next": "^14.2.3",
+      "next-pwa": "^5.6.0",
+      "next-transpile-modules": "^10.0.1",
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1",
+      "react-hook-form": "^7.35.0",
+      "react-intersection-observer": "^9.4.0",
+      "react-toastify": "^9.0.8",
+      "three": "^0.165.0",
+      "three-stdlib": "^2.17.3",
+      "zustand": "^4.1.1"
+   },
+   "devDependencies": {
+      "@graphql-codegen/cli": "2.12.0",
+      "@graphql-codegen/typescript": "2.7.3",
+      "@graphql-codegen/typescript-operations": "2.5.3",
+      "@graphql-codegen/typescript-react-apollo": "3.3.3",
+      "@next/bundle-analyzer": "^12.3.1",
+      "@testing-library/jest-dom": "^6.4.2",
+      "@testing-library/react": "^14.2.1",
+      "@types/jest": "^29.5.12",
+      "@types/node": "18.7.16",
+      "@types/react": "18.0.19",
+      "@types/react-dom": "18.0.6",
+      "autoprefixer": "^10.4.9",
+      "eslint": "8.23.1",
+      "eslint-config-next": "12.3.0",
+      "file-loader": "^6.2.0",
+      "jest": "^29.7.0",
+      "jest-environment-jsdom": "^29.7.0",
+      "postcss": "^8.4.16",
+      "tailwindcss": "^3.1.8",
+      "typescript": "4.8.3",
+      "url-loader": "^4.1.1"
+   }
 }
