--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
       "start": "next start",
       "lint": "next lint",
       "gen": "graphql-codegen --config codegen.yml",
-      "test": "jest"
+      "test": "jest",
+      "prettier": "prettier"
    },
    "dependencies": {
       "@apollo/client": "^3.6.9",
       "@hookform/error-message": "^2.0.0",
+      "@react-spring/three": "^9.7.3",
+      "@react-three/drei": "^9.107.0",
+      "@react-three/fiber": "^8.16.8",
+      "@types/three": "^0.165.0",
       "classnames": "^2.3.2",
       "graphql": "^16.6.0",
       "next": "^14.2.3",
@@ -21,6 +26,8 @@
       "react-hook-form": "^7.35.0",
       "react-intersection-observer": "^9.4.0",
       "react-toastify": "^9.0.8",
+      "tailwind-merge": "^2.3.0",
+      "three": "^0.165.0",
       "zustand": "^4.1.1"
    },
    "devDependencies": {
@@ -40,6 +47,8 @@
       "jest": "^29.7.0",
       "jest-environment-jsdom": "^29.7.0",
       "postcss": "^8.4.16",
+      "prettier": "^3.3.2",
+      "prettier-plugin-tailwindcss": "^0.6.5",
       "tailwindcss": "^3.1.8",
       "typescript": "4.8.3"
    }
